# isaacSim_4wheels_car_simTOReal

./: .gitignore  README.md  pyproject.toml
docs/: phase1_leatherback_anatomy.md  wiring.md
esp32/: main.py  motor.py  set_wifi.sh
jetson/: hold_test.py  mirror_server.py  mirror_stream.py  motor_driver.py  motor_driver_sw.py  motor_test_dirs.py
mujoco_car/: car.xml  continue_train_robot.py  drive_demo.py  env.py  export_onnx.py  mj_utils.py  nav_config.py  policy_nav.onnx  policy_nav_norm.json  record.py  record_nav.py  render_car.py  robot_env.py  robot_env_lidar.py  robot_env_nav.py  test_lidar_env.py  test_nav_env.py  train.py  train_curriculum.py  train_nav_curriculum.py  train_robot.py  watch.py  watch_nav.py  watch_robot.py  watch_robot_lidar.py
robot/: config.json  robot.xml  train_scene.xml  train_scene_lidar.xml  train_scene_nav.xml
robot/assets/: part_1.part  part_1.stl  part_2.part  part_2.stl  rim.part  rim.stl
ros2_nav/: mujoco_bridge.py  policy_node.py  run_sim.sh
scripts/: gui_test.py  smoke_test.py
